--- a/web/templates/layout/app.html.slim
+++ b/web/templates/layout/app.html.slim
@@ -13,16 +13,16 @@ html lang="en"
     .container
       header.header
         nav role="navigation"
-          ul.nav.nav-pills.pull-right
-            li
-              a href="http://www.phoenixframework.org/docs"
-                | Get Started
+          ol.breadcrumb.text-right
+            = if @current_user do
+              li = @current_user.username
+              li = link "Log out", to: session_path(@conn, :delete, @current_user), method: "delete"
+            - else
+              li = link "Register", to: user_path(@conn, :new)
+              li = link "Log in", to: session_path(@conn, :new)
         span.logo
 
-      p.alert-info role="alert"
-        = get_flash(@conn, :info)
-      p.alert-danger role="alert"
-        = get_flash(@conn, :error)
+      = render "_flashes.html", conn: @conn
 
       main role="main"
         = render @view_module, @view_template, assigns
