--- a/web/templates/video/form.html.slim
+++ b/web/templates/video/form.html.slim
@@ -11,6 +11,9 @@
     = text_input f, :title, class: "form-control"
     = error_tag f, :title
   .form-group
+    = label f, :category_id, class: "control-label"
+    = select f, :category_id, @categories, class: "form-control", prompt: "Choose a category"
+  .form-group
     = label f, :description, class: "control-label"
     = textarea f, :description, class: "form-control"
     = error_tag f, :description
